--- a/app/res/layout/single_dialog_choice_view.xml
+++ b/app/res/layout/single_dialog_choice_view.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/choice_dialog_panel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/selector_button_press"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:padding="12dp"
-        android:drawablePadding="5dp"
-        android:layout_marginBottom="@dimen/standard_spacer"/>
+    android:id="@+id/choice_dialog_panel"
+    style="@style/CommCare.Button.Default"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/standard_spacer"
+    android:background="@drawable/selector_button_press"
+    android:drawablePadding="5dp"
+    android:padding="12dp"
+    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
