--- a/app/res/values/dimens.xml
+++ b/app/res/values/dimens.xml
@@ -142,4 +142,5 @@
     <dimen name="map_info_view_text_padding">4dp</dimen>
     
     <dimen name="dp40">40dp</dimen>
+    <dimen name="dp6">6dp</dimen>
 </resources>
