--- a/app/res/values/themes.xml
+++ b/app/res/values/themes.xml
@@ -8,7 +8,7 @@
         <item name="colorControlActivated">@color/cc_dark_cool_accent_color</item>
         <item name="android:textColorSecondary">@color/cc_neutral_text</item>
         <item name="android:textColorPrimary">@color/cc_core_text</item>
-        <item name="buttonStyle">@style/commcare_button_style</item>
+        <item name="buttonStyle">@style/Commcare.Button.Primary</item>
         <item name="android:textAppearanceButton">@style/TextAppearance.AppCompat.Medium</item>
         <item name="android:colorBackground">@color/cc_core_bg</item>
         <item name="detail_odd_row_color">@color/cc_neutral_bg</item>
@@ -119,8 +119,18 @@
     <style name="TextAppearance.Custom.WindowTitle.Case" parent="TextAppearance.Custom.WindowTitle">
     </style>
 
-    <style name="commcare_button_style" parent="Widget.AppCompat.Button">
+    <style name="Commcare.Button.Primary" parent="Widget.AppCompat.Button">
         <item name="textAllCaps">false</item>
+        <item name="android:minHeight">60dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/primary_button_background</item>
+        <item name="cornerRadius">@dimen/dp6</item>
+    </style>
+
+    <style name="CommCare.Button.Default" parent="Widget.AppCompat.Button">
+        <item name="textAllCaps">false</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:textColor">@android:color/primary_text_light</item>
     </style>
 
     <style name="TextAppearance.Custom.WindowTitle.Menu" parent="TextAppearance.Custom.WindowTitle">
