--- a/app/res/values/themes.xml
+++ b/app/res/values/themes.xml
@@ -9,6 +9,7 @@
         <item name="android:textColorSecondary">@color/cc_neutral_text</item>
         <item name="android:textColorPrimary">@color/cc_core_text</item>
         <item name="buttonStyle">@style/Commcare.Button.Primary</item>
+        <item name="buttonBarButtonStyle">@style/Commcare.Button.Primary</item>
         <item name="android:textAppearanceButton">@style/TextAppearance.AppCompat.Medium</item>
         <item name="android:colorBackground">@color/cc_core_bg</item>
         <item name="detail_odd_row_color">@color/cc_neutral_bg</item>
