--- a/app/res/values/dimens.xml
+++ b/app/res/values/dimens.xml
@@ -143,4 +143,6 @@
     
     <dimen name="dp40">40dp</dimen>
     <dimen name="dp6">6dp</dimen>
+    <dimen name="dp60">60dp</dimen>
+    <dimen name="dp48">48dp</dimen>
 </resources>
