--- a/app/res/values/themes.xml
+++ b/app/res/values/themes.xml
@@ -122,7 +122,7 @@
 
     <style name="Commcare.Button.Primary" parent="Widget.AppCompat.Button">
         <item name="textAllCaps">false</item>
-        <item name="android:minHeight">60dp</item>
+        <item name="android:minHeight">@dimen/dp60</item>
         <item name="android:textColor">@color/white</item>
         <item name="backgroundTint">@color/primary_button_background</item>
         <item name="cornerRadius">@dimen/dp6</item>
