--- a/app/res/layout/screen_login.xml
+++ b/app/res/layout/screen_login.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    android:background="@color/cc_core_bg"
+    android:background="#99f8ecbd"
     android:orientation="vertical">
 
     <FrameLayout
