--- a/app/res/layout/draw_layout.xml
+++ b/app/res/layout/draw_layout.xml
@@ -20,6 +20,7 @@
         <Button
             android:id="@+id/btnFinishDraw"
             android:layout_width="wrap_content"
+            android:enabled="false"
             android:layout_height="wrap_content"/>
 
         <LinearLayout
