--- a/app/res/layout/recording_fragment.xml
+++ b/app/res/layout/recording_fragment.xml
@@ -83,6 +83,20 @@
         android:layout_marginTop="15dp"
         android:layout_weight=".1">
 
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/pause"
+            android:layout_marginBottom="10dp"
+            android:background="@color/cc_brand_color"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginEnd="15dp"/>
+
         <Button
             android:layout_width="150dp"
             android:layout_height="wrap_content"
@@ -90,13 +104,14 @@
             android:layout_marginBottom="10dp"
             android:background="@color/cc_brand_color"
             android:textColor="@color/white"
-            android:text="Record Again"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:layout_marginLeft="15dp"
-            android:layout_marginStart="15dp" />
+            android:layout_marginStart="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginEnd="15dp"/>
 
         <Button
-            android:layout_width="80dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/saverecording"
             android:layout_gravity="end"
@@ -106,9 +121,11 @@
             android:minHeight="@dimen/dp60"
             android:background="@color/cc_attention_positive_color"
             android:textColor="@color/white"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:layout_marginLeft="15dp"
-            android:layout_marginStart="15dp" />
+            android:layout_marginStart="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginEnd="15dp"/>
 
     </LinearLayout>
 
