--- a/app/res/layout/query_prompt_layout.xml
+++ b/app/res/layout/query_prompt_layout.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_gravity="left"
         android:gravity="center|left"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
 
     <Spinner
@@ -32,6 +32,13 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:singleLine="true" />
+
+    <LinearLayout
+        android:id="@+id/prompt_checkbox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1" />
 
     <ImageView
         android:id="@+id/assist_view"
