--- a/app/res/layout/query_prompt_layout.xml
+++ b/app/res/layout/query_prompt_layout.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         android:layout_weight="1"
+        android:visibility="gone"
         android:singleLine="true" />
 
     <LinearLayout
