make checkbox invisible by default to fix alignment in non checkbox views

--- a/app/res/layout/query_prompt_layout.xml
+++ b/app/res/layout/query_prompt_layout.xml
@@ -39,6 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:visibility="gone"
         android:layout_weight="1" />
 
     <ImageView
