--- a/app/res/layout/layout_note_msg.xml
+++ b/app/res/layout/layout_note_msg.xml
@@ -44,6 +44,7 @@
         android:id="@+id/layout_note_msg_action_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="Button"
+        android:visibility="gone" />
 
 </LinearLayout>
