--- a/app/res/layout/update_activity.xml
+++ b/app/res/layout/update_activity.xml
@@ -7,8 +7,7 @@
     android:layout_height="fill_parent"
     android:background="@color/cc_core_bg"
     android:scrollbars="none"
-    tools:viewBindingIgnore="true"
-    >
+    tools:viewBindingIgnore="true">
 
     <LinearLayout
         android:layout_width="match_parent"
