--- a/app/res/layout/screen_connect_phone_verify.xml
+++ b/app/res/layout/screen_connect_phone_verify.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
@@ -7,7 +6,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/connect_login_title"
+        android:id="@+id/connect_phone_verify_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -16,35 +15,32 @@
         android:textSize="@dimen/text_largest" />
 
     <TextView
-        android:id="@+id/connect_login_message"
-        android:layout_width="wrap_content"
+        android:id="@+id/connect_phone_verify_label"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_margin="@dimen/content_min_margin"
-        android:textColor="@color/blue"
-        android:textSize="@dimen/text_medium" />
-
-    <Button
-        android:id="@+id/connect_fingerprint_button"
+        android:gravity="start"
+        android:textSize="@dimen/text_medium"/>
+    <AutoCompleteTextView
+        android:id="@+id/connect_phone_verify_code"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/content_start"
-        android:paddingTop="@dimen/content_start" />
-
-    <Button
-        android:id="@+id/connect_pin_button"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/content_start"
-        android:paddingTop="@dimen/content_start" />
+        android:inputType="text"/>
 
     <TextView
-        android:id="@+id/connect_trouble_link"
-        android:layout_width="wrap_content"
+        android:id="@+id/connect_phone_verify_resend"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_margin="@dimen/content_min_margin"
-        android:textColor="@color/blue"
-        android:textSize="@dimen/text_medium" />
+        android:gravity="start"
+        android:textSize="@dimen/text_medium"
+        android:textColor="@color/blue"/>
+
+    <Button
+        android:id="@+id/connect_phone_verify_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/content_start"
+        android:paddingTop="@dimen/content_start" />
 
 </LinearLayout>
