Remembering registration phase to resume after app interruption. Several UI improvements, rewording.

--- a/app/res/layout/screen_connect_login.xml
+++ b/app/res/layout/screen_connect_login.xml
@@ -30,6 +30,14 @@
         android:paddingBottom="@dimen/content_start"
         android:paddingTop="@dimen/content_start" />
 
+    <TextView
+        android:id="@+id/connect_login_or"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/content_min_margin"
+        android:textSize="@dimen/text_medium" />
+
     <Button
         android:id="@+id/connect_pin_button"
         android:layout_width="fill_parent"
