--- a/app/res/layout/screen_connect_verify.xml
+++ b/app/res/layout/screen_connect_verify.xml
@@ -23,11 +23,16 @@
         android:textColor="@color/cc_neutral_color"
         android:textSize="@dimen/text_medium" />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/cc_core_bg"
-        android:orientation="vertical">
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/connect_verify_fingerprint_icon" />
 
         <TextView
             android:id="@+id/connect_verify_fingerprint_message"
@@ -37,6 +42,19 @@
             android:layout_margin="@dimen/content_min_margin"
             android:textColor="@color/cc_neutral_color"
             android:textSize="@dimen/text_medium" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/cc_core_bg"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/connect_verify_pin_icon" />
 
         <TextView
             android:id="@+id/connect_verify_pin_message"
