--- a/app/res/layout/screen_login.xml
+++ b/app/res/layout/screen_login.xml
@@ -91,6 +91,26 @@
                                 android:paddingTop="@dimen/content_start"
                                 android:visibility="gone"/>
 
+                            <TextView
+                                android:id="@+id/login_or"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_margin="@dimen/content_min_margin"
+                                android:textColor="@color/cc_neutral_color"
+                                android:textSize="@dimen/text_medium"
+                                android:visibility="gone"/>
+
+                            <TextView
+                                android:id="@+id/login_app_direct"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_margin="@dimen/content_min_margin"
+                                android:textColor="@color/cc_neutral_color"
+                                android:textSize="@dimen/text_medium"
+                                android:visibility="gone"/>
+
 
                             <Spinner
                                 android:id="@+id/app_selection_spinner"
@@ -101,6 +121,16 @@
                                 android:gravity="center"
                                 android:textSize="@dimen/text_medium"
                                 android:visibility="gone" />
+
+                            <TextView
+                                android:id="@+id/app_label"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_margin="@dimen/content_min_margin"
+                                android:textColor="@color/cc_neutral_color"
+                                android:textSize="@dimen/text_medium"
+                                android:visibility="gone"/>
 
                             <AutoCompleteTextView
                                 android:id="@+id/edit_username"
