--- a/app/res/layout/screen_connect_pictures.xml
+++ b/app/res/layout/screen_connect_pictures.xml
@@ -22,21 +22,49 @@
         android:gravity="start"
         android:textSize="@dimen/text_medium"/>
 
-    <TextView
-        android:id="@+id/connect_pictures_face"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/content_min_margin"
-        android:gravity="start"
-        android:textSize="@dimen/text_medium"/>
+        android:background="@color/cc_core_bg"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/connect_pictures_id"
-        android:layout_width="fill_parent"
+        <ImageView
+            android:id="@+id/connect_pictures_face_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="@dimen/content_min_margin" />
+
+        <TextView
+            android:id="@+id/connect_pictures_face"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/content_min_margin"
+            android:gravity="start"
+            android:textSize="@dimen/text_medium"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/content_min_margin"
-        android:gravity="start"
-        android:textSize="@dimen/text_medium"/>
+        android:background="@color/cc_core_bg"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/connect_pictures_id_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="@dimen/content_min_margin" />
+
+        <TextView
+            android:id="@+id/connect_pictures_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/content_min_margin"
+            android:gravity="start"
+            android:textSize="@dimen/text_medium"/>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/connect_pictures_button"
