--- a/app/res/layout/screen_connect_password_verify.xml
+++ b/app/res/layout/screen_connect_password_verify.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/connect_recovery_title"
+        android:id="@+id/connect_password_verify_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -15,50 +15,29 @@
         android:textSize="@dimen/text_largest" />
 
     <TextView
-        android:id="@+id/connect_recovery_message"
+        android:id="@+id/connect_password_verify_message"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/content_min_margin"
         android:gravity="start"
         android:textSize="@dimen/text_medium"/>
 
-    <RelativeLayout
-        android:id="@+id/connect_recovery_phone_block"
+    <AutoCompleteTextView
+        android:id="@+id/connect_password_verify_input"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone">
-        <AutoCompleteTextView
-            android:id="@+id/connect_recovery_phone_country_input"
-            android:layout_width="100sp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:inputType="text" />
-
-        <AutoCompleteTextView
-            android:id="@+id/connect_recovery_phone_input"
-            android:layout_toEndOf="@id/connect_recovery_phone_country_input"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:inputType="numberDecimal" />
-    </RelativeLayout>
-
-    <Button
-        android:id="@+id/connect_recovery_button_1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/content_start"
-        android:paddingTop="@dimen/content_start"/>
+        android:inputType="textPassword" />
 
     <TextView
-        android:id="@+id/connect_recovery_or"
+        android:id="@+id/connect_password_verify_forgot"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/content_min_margin"
-        android:gravity="center"
+        android:gravity="start"
         android:textSize="@dimen/text_medium"/>
 
     <Button
-        android:id="@+id/connect_recovery_button_2"
+        android:id="@+id/connect_password_verify_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/content_start"
