--- a/app/res/layout/screen_connect_recovery_decision.xml
+++ b/app/res/layout/screen_connect_recovery_decision.xml
@@ -42,6 +42,15 @@
             android:inputType="numberDecimal" />
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/connect_recovery_phone_message"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/content_min_margin"
+        android:gravity="start"
+        android:textSize="@dimen/text_medium"
+        android:visibility="gone"/>
+
     <Button
         android:id="@+id/connect_recovery_button_1"
         android:layout_width="fill_parent"
