--- a/app/res/layout/screen_connect_recovery_decision.xml
+++ b/app/res/layout/screen_connect_recovery_decision.xml
@@ -12,7 +12,8 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/content_min_margin"
         android:textColor="@color/cc_neutral_color"
-        android:textSize="@dimen/text_largest" />
+        android:textSize="@dimen/text_largest"
+        android:text="@string/connect_recovery_title"/>
 
     <TextView
         android:id="@+id/connect_recovery_message"
@@ -64,7 +65,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/content_min_margin"
         android:gravity="center"
-        android:textSize="@dimen/text_medium"/>
+        android:textSize="@dimen/text_medium"
+        android:text="@string/choice_or"/>
 
     <Button
         android:id="@+id/connect_recovery_button_2"
