--- a/app/res/layout/screen_connect_password.xml
+++ b/app/res/layout/screen_connect_password.xml
@@ -12,7 +12,8 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/content_min_margin"
         android:textColor="@color/cc_neutral_color"
-        android:textSize="@dimen/text_largest" />
+        android:textSize="@dimen/text_largest"
+        android:text="@string/connect_password_title"/>
 
     <TextView
         android:id="@+id/connect_password_message"
@@ -20,19 +21,22 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/content_min_margin"
         android:gravity="start"
-        android:textSize="@dimen/text_medium"/>
+        android:textSize="@dimen/text_medium"
+        android:text="@string/connect_password_message"/>
 
     <AutoCompleteTextView
         android:id="@+id/connect_password_input"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:text="@string/connect_password"/>
 
     <AutoCompleteTextView
         android:id="@+id/connect_password_repeat_input"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:text="@string/connect_password_repeat"/>
 
     <TextView
         android:id="@+id/connect_password_error_message"
@@ -47,6 +51,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/content_start"
-        android:paddingTop="@dimen/content_start" />
+        android:paddingTop="@dimen/content_start"
+        android:text="@string/connect_password_button"/>
 
 </LinearLayout>
