--- a/app/res/layout/screen_connect_phone_verify.xml
+++ b/app/res/layout/screen_connect_phone_verify.xml
@@ -12,7 +12,8 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/content_min_margin"
         android:textColor="@color/cc_neutral_color"
-        android:textSize="@dimen/text_largest" />
+        android:textSize="@dimen/text_largest"
+        android:text="@string/connect_verify_phone_title"/>
 
     <TextView
         android:id="@+id/connect_phone_verify_label"
@@ -35,6 +36,7 @@
         android:gravity="start"
         android:textSize="@dimen/text_medium"
         android:textColor="@color/blue"
+        android:text="@string/connect_verify_phone_change"
         android:visibility="gone"/>
 
     <TextView
@@ -44,13 +46,15 @@
         android:layout_margin="@dimen/content_min_margin"
         android:gravity="start"
         android:textSize="@dimen/text_medium"
-        android:textColor="@color/blue"/>
+        android:textColor="@color/blue"
+        android:text="@string/connect_verify_phone_resend"/>
 
     <Button
         android:id="@+id/connect_phone_verify_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/content_start"
-        android:paddingTop="@dimen/content_start" />
+        android:paddingTop="@dimen/content_start"
+        android:text="@string/connect_verify_phone_verify"/>
 
 </LinearLayout>
