--- a/app/res/layout/screen_connect_verify.xml
+++ b/app/res/layout/screen_connect_verify.xml
@@ -12,7 +12,8 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/content_min_margin"
         android:textColor="@color/cc_neutral_color"
-        android:textSize="@dimen/text_largest" />
+        android:textSize="@dimen/text_largest"
+        android:text="@string/connect_verify_title"/>
 
     <TextView
         android:id="@+id/connect_verify_message"
@@ -21,7 +22,8 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/content_min_margin"
         android:textColor="@color/cc_neutral_color"
-        android:textSize="@dimen/text_medium" />
+        android:textSize="@dimen/text_medium"
+        android:text="@string/connect_verify_message"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,7 +44,8 @@
             android:layout_gravity="center"
             android:layout_margin="@dimen/content_min_margin"
             android:textColor="@color/cc_neutral_color"
-            android:textSize="@dimen/text_medium" />
+            android:textSize="@dimen/text_medium"
+            android:text="@string/connect_verify_fingerprint"/>
 
     </LinearLayout>
 
@@ -65,7 +68,8 @@
             android:layout_gravity="center"
             android:layout_margin="@dimen/content_min_margin"
             android:textColor="@color/cc_neutral_color"
-            android:textSize="@dimen/text_medium" />
+            android:textSize="@dimen/text_medium"
+            android:text="@string/connect_verify_pin"/>
 
     </LinearLayout>
 
